--- a/index.html
+++ b/index.html
@@ -13,6 +13,34 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
+    <style type="text/css">
+      range{
+        outline: none;
+      }
+
+      #container{
+        text-align: center;
+      }
+
+      #container button{
+        font-family: Arial;
+        font-size: 15px;
+      }
+
+      #container div{
+        margin-top: 10px;
+      }
+
+      #container p{
+        margin-top: 25px;
+        text-align: left;
+      }
+
+      #video{
+        width: 50%;
+      }
+    </style>
+
     <title>Video Player by rahul-desai3</title>
   </head>
 
@@ -33,8 +61,30 @@
 
 <p>Its just a basic HTML5 video player (with no styling).</p>
 
-<h1>
-<a id="demo" class="anchor" href="#demo" aria-hidden="true"><span class="octicon octicon-link"></span></a><a href="http://jsfiddle.net/tz0opmf4/show/">Demo</a>
+          <h1>
+<a id="video-player" class="anchor" href="#video-player" aria-hidden="true"><span class="octicon octicon-link"></span></a>Demo</h1>
+
+<div id="container">
+    <div>
+        <video id="video" src="http://media.w3.org/2010/05/sintel/trailer.mp4" >
+            Your browser does not support the <code>video</code> element.
+        </video>
+    </div>
+    <div>
+        <button id="play_pause_button">Play</button>
+        <input type="range" id="seekbar" min="0" max="10" value="0" step="0.1" />
+        <button id="mute_button">Mute</button>
+        <input type="range" id="volume" min="0" max="1" value="0.5" step="0.01"/>
+        <button id="fullscreen_button">Fullscreen</button>
+    </div>
+    <div>
+        <button id="rewind_button">Rewind 3s</button>
+        <button id="forward_button">Forward 3s</button>
+        <button id="replay_button">Replay</button>
+    </div>
+    <p><strong>Note:</strong> The video used here is open source and fetched from <a href="http://w3.org" target="_blank">w3.org</a>. Also note that in fullscreen mode, the fallback is on the default browser controls currently.</p>
+</div>
+
 </h1>
 
 <h2>
@@ -75,6 +125,109 @@
       </div>
     </div>
 
-  
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+
+    <script type="text/javascript">
+      $(document).ready(function(){
+        var video = document.getElementById("video");
+
+        video.volume = $("input#volume").val();
+
+        $("button#play_pause_button").click(function(){
+          if(video.paused){
+            video.play();
+            $("button#play_pause_button").html("Pause");
+            var seekbar_update = setInterval(function(){
+              $("input#seekbar").val(video.currentTime / video.duration * 10);                
+            }, 25);
+          }
+          else{
+            video.pause();
+            window.clearInterval(seekbar_update);
+            $("button#play_pause_button").html("Play");
+          }           
+        });
+
+        $("input#seekbar").change(function(){
+          video.currentTime = video.duration * $("input#seekbar").val() / 10;
+        })
+
+        var volume_backup = 0;
+        $("button#mute_button").click(function(){
+          if(video.muted == false){
+            volume_backup = video.volume;
+            video.muted = true;
+            $("button#mute_button").html("Unmute");
+            $("input#volume").val(0);
+          }
+          else{
+            video.muted = false;
+            $("button#mute_button").html("Mute");
+            if(volume_backup == 0){
+              video.volume = 0.5;
+              $("input#volume").val(0.5);
+            }
+            else{
+              video.volume = volume_backup;
+              $("input#volume").val(volume_backup);
+            }
+          }
+        });
+
+        $("input#volume").change(function(){
+          video.volume = $("input#volume").val();
+          if($("input#volume").val() == 0)
+            $("button#mute_button").html("Unmute");
+          else
+            $("button#mute_button").html("Mute");
+        });
+
+        $("button#fullscreen_button").click(function(){
+          if(video.requestFullscreen)
+            video.requestFullscreen();
+          else if(video.msRequestFullscreen)
+            video.msRequestFullscreen();
+          else if(video.mozRequestFullScreen)
+            video.mozRequestFullScreen();
+          else if(video.webkitRequestFullscreen)
+            video.webkitRequestFullscreen();
+        });
+
+        $("button#rewind_button").click(function(){
+          video.pause();
+          video.currentTime -= 3;
+          video.play();
+          var seekbar_update = setInterval(function(){
+              $("input#seekbar").val(video.currentTime / video.duration * 10);                
+            }, 25);
+          $("button#play_pause_button").html("Pause");
+        });
+
+        $("button#forward_button").click(function(){
+          video.pause();
+          video.currentTime += 3;
+          video.play();
+          var seekbar_update = setInterval(function(){
+              $("input#seekbar").val(video.currentTime / video.duration * 10);                
+            }, 25);
+          $("button#play_pause_button").html("Pause");
+        });
+
+        $("button#replay_button").click(function(){
+          video.pause();
+          video.currentTime = 0;
+          video.play();
+          var seekbar_update = setInterval(function(){
+              $("input#seekbar").val(video.currentTime / video.duration * 10);                
+            }, 25);
+          $("button#play_pause_button").html("Pause");
+        });
+
+        $("video#video").bind("ended", function() {
+          $("button#play_pause_button").html("Play");
+          $("input#seekbar").val(0);
+        });
+      });
+    </script>
   </body>
 </html>
