--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
 <div id="container">
     <div>
-        <video id="video" src="http://media.w3.org/2010/05/sintel/trailer.mp4" >
+        <video id="video" src="trailer.mp4" >
             Your browser does not support the <code>video</code> element.
         </video>
     </div>
