--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 <p>Its just a basic HTML5 video player (with no styling).</p>
 
           <h1>
-<a id="video-player" class="anchor" href="#video-player" aria-hidden="true"><span class="octicon octicon-link"></span></a>Demo</h1>
+<a id="demo" class="anchor" href="#demo" aria-hidden="true"><span class="octicon octicon-link"></span></a>Demo</h1>
 
 <div id="container">
     <div>
