removed broken link

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 <h2>
 <a id="license" class="anchor" href="#license" aria-hidden="true"><span class="octicon octicon-link"></span></a>License</h2>
 
-<p><a href="Open%20source">MIT</a></p>
+<p>MIT</p>
         </section>
 
         <aside id="sidebar">
